--- a/_output.yml
+++ b/_output.yml
@@ -42,6 +42,7 @@ bookdown::gitbook:
     toolbar:
       position: fixed
     edit : null
+    download: ["PDF"]
     sharing:
       github: yes
       facebook: yes
