--- a/_output.yml
+++ b/_output.yml
@@ -42,7 +42,7 @@ bookdown::gitbook:
     toolbar:
       position: fixed
     edit : null
-    download: ["PDF"]
+    download: ["pdf"]
     sharing:
       github: yes
       facebook: yes
